2011-04-22  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/48717
	* tree-ssa-forwprop.c (associate_plusminus): For A + ~A and
	~A + A optimizations use build_int_cst_type instead of build_int_cst.

2011-04-22  Jakub Jelinek  <jakub@redhat.com>

	PR c/48716
	* gimplify.c (gimplify_bind_expr): Mark as GOVD_LOCAL also
	TREE_STATIC variables declared inside of some OpenMP construct.

2011-04-21  Uros Bizjak  <ubizjak@gmail.com>

	PR target/48708
	* config/i386/i386.c (ix86_expand_vector_set) <V2DImode>: Generate
	vec_extract and vec_concat for non-SSE4_1 targets.

2011-04-21  Richard Guenther  <rguenther@suse.de>

	PR middle-end/48695
	* tree-ssa-alias.c (aliasing_component_refs_p): Compute base
	objects and types here.  Adjust for their offset before comparing.

2011-04-21  Eric Botcazou  <ebotcazou@adacore.com>

	* gimple.c (walk_gimple_op) <GIMPLE_CALL>: Fix couple of oversights.

2011-04-20  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR target/48288
	* config/pa/predicates.md (ior_operand): Delete predicate.
	(cint_ior_operand, reg_or_cint_ior_operand): New predicates.
	* config/pa/pa.md (iordi3): Use reg_or_cint_ior_operand predicate in
	expander.  Use cint_ior_operand in unnamed insn.
	(iorsi3): Likewise.
	* config/pa/pa-protos.h (ior_operand): Delete declarations.

2011-04-20  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/48611
	* tree-eh.c (note_eh_region_may_contain_throw): Don't propagate
	beyond ERT_MUST_NOT_THROW region.

2011-04-20  Eric Botcazou  <ebotcazou@adacore.com>

	Backport from mainline
	2011-04-19  Eric Botcazou  <ebotcazou@adacore.com>

	PR lto/48148
	* gimple.c (gimple_types_compatible_p_1) <ENUMERAL_TYPE>: Do not merge
	the types if they have different enumeration identifiers.

	2011-04-18  Eric Botcazou  <ebotcazou@adacore.com>

	PR lto/48492
	* cfgexpand.c (expand_debug_expr) <VAR_DECL>: Return NULL for a
	DECL_IN_CONSTANT_POOL without RTL.

2011-04-20  Richard Guenther  <rguenther@suse.de>
