@@ -1,3 +1,8 @@
+2011-04-23  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c/48685
+	* gcc.dg/pr48685.c: New test.
+
 2011-04-22  Jakub Jelinek  <jakub@redhat.com>
 
 	PR tree-optimization/48717
